[package]
name = "cw"
version = "0.7.0"
authors = ["Thomas Hurst <tom@hur.st>"]
license = "MIT"
description = "Count Words, a fast wc clone"
readme = "README.md"
repository = "https://github.com/Freaky/cw"
keywords = ["wc", "word", "count"]
categories = [ "command-line-utilities", "text-processing" ]
edition = "2018"

[dependencies]
bytecount = "0.6"
structopt = "0.3"
libc = "0.2"
memchr = "2.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
bstr = "0.2.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winbase"] }

[features]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]
